--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-test2",
+  "name": "gulp-builder by AlexandrCook",
   "description": "",
   "main": "gulpfile.js",
   "license": "ISC",
