add empty folders

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-builder by AlexandrCook",
+  "name": "gulp-builde_by_AlexandrCook",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
