--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ yarn-error.log*
 # Bower dependency directory (https://bower.io/)
 bower_components/
 
+#folder for css compiling
+app/css/
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/
